--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -20,9 +20,9 @@
 </div>
 
 <div class="slideshow-container">
-  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/8f764dd6-160c-4779-9c55-7c8444a47f26/Space+1-1+(1)-+cover.jpg" style="width:100%"></div>
-  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/6862f3a9-1b21-4b17-8b5b-86501ac8ef27/Space+1-1+%282%29-+meeting.JPG" style="width:100%"></div>
-  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/bddf391d-6bf0-4c38-add0-83b37f7fffe1/Space+1-1+%283%29-+production.jpg" style="width:100%"></div>
+  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/dab62329-01c6-4f4c-a52a-3e5c27ea9eb8/Space+1-1+%281%29-+cover.jpg" style="width:100%"></div>
+  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/6e57e94d-b68b-477e-8ec2-90174e99b194/Space+1-1+%282%29-+meeting.JPG" style="width:100%"></div>
+  <div class="mySlides1"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/a8d0f5b6-c170-4040-a9a5-3b37a99d9e2a/Space+1-1+%283%29-+production.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
@@ -50,9 +50,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/00457424-e29c-497a-9a37-a71040cf3d57/Space+1-2+%281%29-+cover.jpg" style="width:100%"></div>
-  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/bf2a15db-8f49-4246-8541-6f38f5bcd30f/Space+1-2+%282%29-+meeting.JPG" style="width:100%"></div>
-  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/64b637d7-c4fd-485f-b831-2ee317f7f613/Space+1-2+%283%29-+event.JPG" style="width:100%"></div>
+  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/32fad8d0-7ffa-443e-9c0b-69de17ddf9a8/Space+1-2+%284%29-+production.jpg" style="width:100%"></div>
+  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/2eeee302-c5b2-41ba-b337-1321af1edbc8/Space+1-2+%285%29.JPG" style="width:100%"></div>
+  <div class="mySlides2"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/c717e4dc-6610-40df-ba17-51123275ebfa/Space+1-2+%282%29-+meeting.JPG" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
@@ -80,9 +80,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/fa3eff7e-0564-4ac9-a82d-d5539f1eb23f/Studio+2-5+%282%29-+meeting.JPG" style="width:100%"></div>
-  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/216b5f74-2bf0-45cc-bf37-8ffa17cb8414/Studio+2-4+%287%29.JPG" style="width:100%"></div>
-  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/c8721ed4-dbcf-4bc7-83ea-b56b3c5eacf9/Studio+2-5+%286%29.jpg" style="width:100%"></div>
+  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/b674ed5a-a760-47b4-bac3-926d25d03a05/Space+2-4+%287%29.JPG" style="width:100%"></div>
+  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/2e5d9449-3570-4535-b916-ff6ae14b3449/Space+2-2+%281%29-+cover.JPG" style="width:100%"></div>
+  <div class="mySlides3"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/45b96bad-71ae-4cf5-8e64-3b8f843bc4c4/Space+2-2+%282%29-+production.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
@@ -110,9 +110,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/22cce96e-b70b-454c-a3a9-916471b712e1/Space+2-1+%284%29-+production.jpg" style="width:100%"></div>
-  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/d23dde96-928f-491d-a86a-4cbe5557a833/Space+2-1+%282%29-+meeting.jpg" style="width:100%"></div>
-  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/c157df35-a851-433e-99f7-c841e377e80d/Space+2-1+%287%29.jpg" style="width:100%"></div>
+  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/bbffbf84-645a-4798-853f-6069f0db7117/Space+2-1+%287%29.jpg" style="width:100%"></div>
+  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/eb264973-2b78-4461-babd-cda48ab78180/Space+2-1+%284%29-+production.jpg" style="width:100%"></div>
+  <div class="mySlides4"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/1beacc01-f472-4c7d-94e0-c5446cff97f5/Space+2-1+%283%29-+event.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
@@ -139,9 +139,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/068c7efe-a702-49b8-be80-9079d1fee1e9/Studio+3-3+%287%29.jpg" style="width:100%"></div>
-  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/a116225d-1d50-42e9-8f50-49aea1111654/Space+3-2+%284%29.jpg" style="width:100%"></div>
-  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/265556ce-ac31-4155-93ff-9f92359a93ca/Space+3-2+%282%29-+meeting.jpeg?" style="width:100%"></div>
+  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/c4977837-26ee-4383-a041-9b62cee90430/Space+3-2+%282%29-+meeting.jpeg" style="width:100%"></div>
+  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/611814da-b9b3-4479-aed1-6bcdbe76bafc/Space+3-2+%284%29.jpg" style="width:100%"></div>
+  <div class="mySlides5"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/3e7c116f-8e7e-4717-a8ed-b224e920e197/Space+3-3+%287%29.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
@@ -168,9 +168,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/9585f7ec-e712-45ef-8311-cb47186f2e6d/Space+3-4+%283%29.JPG" style="width:100%"></div>
-  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/1675d685-2c0a-4b95-9faa-617010e13ba8/Space+3-4+%285%29.JPG" style="width:100%"></div>
-  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/d94a923f-11ec-4bb7-a093-fc00d63c01d4/Space+3-4+%284%29-+meeting.JPG" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/e379cce7-8f20-4949-89db-478adaa1bc6a/Space+3-4+%281%29-+cover-production.JPG" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/a0bf0af4-e0d3-472b-879e-d929c49aed14/Space+3-4+%284%29-+meeting.JPG" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/14034660-5670-41d0-89fe-1b6afc3cbbb7/Space+3-4+%282%29.JPG" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
@@ -197,9 +197,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/6aaf8e8e-7f97-49ef-8edf-096c5d845528/Space+4+%287%29.jpg" style="width:100%"></div>
-  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/b56800fb-8f7f-4aab-bad8-0d3dff5d7210/Space+4+%285%29.jpg" style="width:100%"></div>
-  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/65660ef22544614ca593676c/66ba119d-a46b-43b3-a253-d8f11834fd25/Space+4+%281%29-+cover-production.jpg" style="width:100%"></div>
+  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/14baee55-0f6c-4b26-8fcf-fba970d0af18/Space+4+%281%29-+cover-production.jpg" style="width:100%"></div>
+  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/d483857b-2ee7-4d55-a534-9ee1c443469a/Space+4+%283%29.jpg" style="width:100%"></div>
+  <div class="mySlides7"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/0ee0fb60-2d27-4858-80ef-5b6002310f72/Space+4+%282%29-+meeting.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
