--- a/blocks/studio_map.html
+++ b/blocks/studio_map.html
@@ -1,29 +1,29 @@
 <div class='map-wrapper'>
   <svg viewBox="0 0 1800 1550" class="map-wrapper map-area">
-    <a xlink:href="/spaces/#Space_1-1_jump">
-      <rect x="230" y="1240" width="510" height="290" /></a>
-    <a xlink:href="/spaces/#Space_1-2_jump">
-      <rect x="225" y="30" width="490" height="290" /></a>
-    <a xlink:href="/spaces/#Space_2_jump">
-      <rect x="740" y="30" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Space_2_jump">
-      <rect x="1090" y="30" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Space_2_jump">
-      <rect x="740" y="1240" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Space_2_jump">
-      <rect x="1090" y="1240" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Space_2-1_jump">
-      <rect x="1445" y="1240" width="330" height="290" /></a>
-    <a xlink:href="/spaces/#Space_4_jump">
-      <rect x="410" y="470" width="310" height="620" /></a>
-    <a xlink:href="/spaces/#Space_3-4_jump">
-      <rect x="740" y="470" width="310" height="300" /></a>
-    <a xlink:href="/spaces/#Space_3_jump">
-      <rect x="1075" y="470" width="310" height="300" /></a>
-    <a xlink:href="/spaces/#Space_3_jump">
-      <rect x="740" y="790" width="310" height="300" /></a>
-    <a xlink:href="/spaces/#Space_3_jump">
-      <rect x="1075" y="790" width="310" height="300" /></a>
+    <a xlink:href="#Space_1-1_jump">
+      <polygon points="220,1255 220,1535 720,1535 720,1215 380,1215 380,1255"></a>
+    <a xlink:href="#Space_1-2_jump">
+      <polygon points="205,303 205,19 720,19 720,332 388,332 388,303"></a>
+    <a xlink:href="#Space_2_jump">
+      <rect x="720" y="19" width="350" height="315" /></a>
+    <a xlink:href="#Space_2_jump">
+      <rect x="1071" y="19" width="350" height="315" /></a>
+    <a xlink:href="#Space_2_jump">
+      <rect x="720" y="1215" width="350" height="320" /></a>
+    <a xlink:href="#Space_2_jump">
+      <rect x="1071" y="1215"  width="350" height="320" /></a>
+    <a xlink:href="#Space_2-1_jump">
+      <rect x="1421" y="1215" width="353" height="320" /></a>
+    <a xlink:href="#Space_4_jump">
+      <rect x="398" y="465" width="320" height="625" /></a>
+    <a xlink:href="#Space_3-4_jump">
+      <rect x="718" y="465" width="330" height="310" /></a>
+    <a xlink:href="#Space_3_jump">
+      <rect x="1048" y="465" width="348" height="310" /></a>
+    <a xlink:href="#Space_3_jump">
+      <rect x="718" y="775" width="330" height="315" /></a>
+    <a xlink:href="#Space_3_jump">
+      <rect x="1048" y="775" width="348" height="315" /></a>
   </svg>
-  <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66bb8a82a8c4c057e7a968ce/1723566722968/Skedda+Map.png" />
+  <img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66fad2e887c278516d0e2ce7/1727714024510/Skedda+Map.png" />
 </div>
