--- a/pages/amenities.html
+++ b/pages/amenities.html
@@ -1,12 +1,12 @@
-<div class="two_columns" style="gap:5%">
-  <div class="column" style="flex:60%; ">
+<div class="amenities_columns" style="padding-left: 10px;">
+  <div class="column">
     <h4 class="column_title">
       Additional Solutions Include:
     </h4>
-    <div class="two_columns">
+    <div class="amenities_columns" id="amenities_col">
       <div class="column">
-        <h4>Paid Amenities</h4>
-        <div class="icon_text_list">
+        <h4 class="mobile">Paid Amenities</h4>
+        <div class="amenities_text_list">
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Projector</p>
           </div>
@@ -31,8 +31,8 @@
         </div>
       </div>
       <div class="column">
-        <h4>Available On Request</h4>
-        <div class="icon_text_list">
+        <h4 class="mobile">Available On Request</h4>
+        <div class="amenities_text_list">
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea10ff4ff610f15b578d/1723132432098/icon-heart-tag.png">
             <p>Tables</p>
           </div>
@@ -53,23 +53,23 @@
     </div>
   </div>
   <div class="column">
-    <h4 class="column_title">
+    <h4 class="column_title" style="margin-bottom: 20px;">
       A sampling of possible set-ups:
     </h4>
-    <div class="icon_row" style="margin-bottom: 10px;flex-wrap:wrap;row-gap:10px;justify-content:center">
-      <div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd532d8704d046cd0fa/1722965205168/setup-hollow-square.png">
+    <div class="setup_icon"">
+      <div class="icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd532d8704d046cd0fa/1722965205168/setup-hollow-square.png">
         <p2>Hollow Square</p2>
       </div>
-      <div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd47f9a41601151c95e/1722965204984/setup-classroom.png">
+      <div class="icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd47f9a41601151c95e/1722965204984/setup-classroom.png">
         <p2>Classroom</p2>
       </div>
-      <div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd5dc21611738d7e45d/1722965205021/setup-conference.png">
+      <div class="icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd5dc21611738d7e45d/1722965205021/setup-conference.png">
         <p2>Conference</p2>
       </div>
-      <div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25db648aa555017e95dfb/1722965430710/setup-workshop.png">
+      <div class="icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25db648aa555017e95dfb/1722965430710/setup-workshop.png">
         <p2>Workshop</p2>
       </div>
-      <div class="setup_icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25db6300dab43af0ed116/1722965430480/setup-u-shape.png">
+      <div class="icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25db6300dab43af0ed116/1722965430480/setup-u-shape.png">
         <p2>U-Shape</p2>
       </div>
     </div>
