new copy for spaces

--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="par"> 
-    <p2>Space 1-1 is a versatile 500 sq ft space, ideal for productive corporate events. Customize the layout to suit your specific needs, enjoy ample natural light, and benefit from a mirrored wall. This adaptable space is perfect for memorable meetings and workshops. </p2>
+    <p2>Space 1-1 is a large loft, ideal for corporate events, meetings, and workshops. Customize the layout to suit your specific needs, enjoy ample natural light from the over-sized windows, and benefit from a mirrored spanning the long wall.</p2>
   </div>
   <a href="/space-1-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
@@ -41,7 +41,7 @@
     </div>
   </div>
   <div class="par"> 
-    <p2>Space 1-2 is a versatile space featuring a low stage, perfect for presentations and performances. Enjoy natural light from oversized windows and benefit from adaptable lighting to create a dynamic atmosphere. The comfortable seating and sound-dampening materials ensure a memorable experience for your attendees. </p2> 
+    <p2>Space 1-2 is a vibrant space boasting a low stage and adjustable stage lighting, along with street-view windows. With its dynamic atmosphere and adaptable layout we ensure a memorable experience for presentations, panel discussions, or even small-scale productions.</p2> 
   </div> <br>
   <a href="/space-1-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
@@ -62,7 +62,7 @@
 <!-- Space Type 2 -->
 <div class="space_desc_box">
   <h3>
-    Space Type 2
+    Space Type 2 - Windowed Lofts
   </h3>
   <div class="row_wrapper">
     <div class="icon_row">
@@ -71,7 +71,7 @@
     </div>
   </div>
   <div class="par"> 
-    <p2>Space Type 2 is a versatile 323 sq ft loft with oversized windows and a mirrored wall, perfect for a variety of activities. Accommodating up to 25 people, the space offers ample room for collaboration and productivity. With adaptable lighting, you can create the ideal atmosphere for your team. </p2> 
+    <p2>Space Type 2 lofts are a collection of sun-lit spaces with large windows and a mirrored wall, perfect for a variety of activities. Each space is a prime location for meetings, rehearsals, and all varieties of photo shoots.</p2> 
   </div> <br>
   <a href="/space-type-2">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
@@ -91,7 +91,7 @@
 <!-- Space 2-1 -->
 <div class="space_desc_box">
   <h3>
-    Space 2-1
+    Space 2-1 - Sound-Dampened Space
   </h3>
   <div class="row_wrapper">
     <div class="icon_row">
@@ -101,7 +101,7 @@
     </div>
   </div>
   <div class="par"> 
-    <p2> Space 2-1 is an adaptable 323 sq ft loft bathed in natural light. This space is ideal for productive collaborations, with ample room for up to 25 people. Our advanced sound-dampening technology ensures a quiet and focused environment, perfect for meetings, interviews, or recordings. </p2> 
+    <p2>Space 2-1 is a sound-dampened room with large windows ideal for productive collaborations. Due to it's additional sound-panels, it is a perfect space for recordings, classes, and private meetings.</p2> 
   </div> <br>
   <a href="/space-2-1">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
@@ -121,7 +121,7 @@
 <!-- Space Type 3 -->
 <div class="space_desc_box">
   <h3>
-    Space Type 3
+    Space Type 3 - Interior Spaces
   </h3>
   <div class="row_wrapper">
     <div class="icon_row">
@@ -130,7 +130,7 @@
     </div>
   </div>
   <div class="par"> 
-    <p2>Space Type 3 is a 323 sq ft loft, perfect for dance classes, creative projects, or small meet-ups. The mirrored wall adds a touch of elegance and can be used for various purposes. The studio's acoustic insulation ensures a quiet and focused environment, ideal for meetings, workshops, or creative projects. </p2> <br>
+    <p2>Space Type 3 rooms are a set of intimate studios that include a mirrored wall, adding a touch of elegance. These smaller spaces are amazing for dance classes, workshops, and meetings!</p2> <br>
   </div>
   <a href="/space-type-3">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
@@ -159,7 +159,7 @@
     </div>
   </div>
   <div class="par"> 
-    <p>Space 3-4 is a dedicated conference room with a large table, whiteboard, and easy-to-connect TV screen. Ideal for productive meetings and presentations. This flexible space is perfect for brainstorming, collaborating, and sharing ideas with your team. </p2> 
+    <p>Space 3-4 is a dedicated conference room with a large table, mobile whiteboards, additional sound-dampening and an easy-to-connect TV screen. It is a professional space perfect for brainstorming, collaborating, and sharing ideas with your team.</p2> 
   </div> <br>
   <a href="/space-3-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
@@ -179,7 +179,7 @@
 <!-- Space 4 -->
 <div class="space_desc_box">
   <h3>
-    Space 4
+    Space 4 - Large Sprung Floor Studio
   </h3>
   <div class="row_wrapper">
     <div class="icon_row">
@@ -188,7 +188,7 @@
     </div>
   </div>
   <div class="par"> 
-    <p>Space 4 is our largest available space, spanning 600 sq ft, making it ideal for workshops, training sessions, or large meetings. The versatile room features a wall-to-wall mirror with retractable curtains, perfect for group activities or presentations. </p2> 
+    <p>Space 4 is our largest available space, making it ideal for workshops, training sessions, or large meetings. The flexible space features a wall-to-wall mirrored with retractable curtains, along with a comfortable sprung floor, designed for group activities, rehearsals and movement and dance classes.</p2> 
   </div> <br>
   <a href="/space-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
