added to live website

--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -179,7 +179,7 @@
 <!-- Space 4 -->
 <div class="space_desc_box">
   <h3>
-    Space 4 - Large Sprung Floor Studio
+    Space 4 - Large Sprung Floor Space
   </h3>
   <div class="row_wrapper">
     <div class="icon_row">
@@ -188,7 +188,7 @@
     </div>
   </div>
   <div class="par"> 
-    <p>Space 4 is our largest available space, making it ideal for workshops, training sessions, or large meetings. The flexible space features a wall-to-wall mirrored with retractable curtains, along with a comfortable sprung floor, designed for group activities, rehearsals and movement and dance classes.</p2> 
+    <p>Space 4 is our largest space, making it ideal for workshops, training sessions, or large meetings. The space features a wall-to-wall mirror with retractable curtains, along with a comfortable sprung floor, designed for group activities, rehearsals and dance classes.</p2> 
   </div> <br>
   <a href="/space-4">
     <button>More Details &nbsp&nbsp - &nbsp&nbsp Book</button>
