added new 304 photos

--- a/pages/space_page.html
+++ b/pages/space_page.html
@@ -168,9 +168,9 @@
 
 
 <div class="slideshow-container">
-  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/e379cce7-8f20-4949-89db-478adaa1bc6a/Space+3-4+%281%29-+cover-production.JPG" style="width:100%"></div>
-  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/a0bf0af4-e0d3-472b-879e-d929c49aed14/Space+3-4+%284%29-+meeting.JPG" style="width:100%"></div>
-  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/14034660-5670-41d0-89fe-1b6afc3cbbb7/Space+3-4+%282%29.JPG" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/d8969d7c-c195-4259-9bdb-723c3be27b94/Space+3-4+%281%29-+cover+%2B+event.jpg" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/0f6ad664-33fa-47ba-8a2f-f2b000caf030/Space+3-4+%282%29-+office.jpg" style="width:100%"></div>
+  <div class="mySlides6"><img src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/0cb6949e-d8fc-4670-b678-1f519941254b/Space+3-4+%286%29.jpg" style="width:100%"></div>
 </div>
   <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
   <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
