--- a/pages/amenities.html
+++ b/pages/amenities.html
@@ -9,24 +9,31 @@
         <div class="amenities_text_list">
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Projector</p>
+            <div class="tooltip"> ($) <span class="tooltiptext">$20/day</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Coffee/Tea Package</p>
+            <div class="tooltip"> ($) <span class="tooltiptext" style="width: 150px">$50/day, serves 8</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Ring Light</p>
+            <div class="tooltip"> ($) <span class="tooltiptext">$10/day</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Paper Backdrop</p>
+            <div class="tooltip"> ($) <span class="tooltiptext">$10/day</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Backless Stools</p>
+            <div class="tooltip"> ($) <span class="tooltiptext" style="width: 150px">$5/day, 1 stool</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Breakout Spaces</p>
+            <div class="tooltip"> ($) <span class="tooltiptext" style="width: 200px">Contact us for pricing</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Waiting Rooms</p>
+            <div class="tooltip"> ($) <span class="tooltiptext" style="width: 200px">Contact us for pricing</span> </div>
           </div>
         </div>
       </div>
@@ -56,7 +63,7 @@
     <h4 class="column_title" style="margin-bottom: 20px;">
       A sampling of possible set-ups:
     </h4>
-    <div class="setup_icon"">
+    <div class="setup_icon">
       <div class="icon"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b25cd532d8704d046cd0fa/1722965205168/setup-hollow-square.png">
         <p2>Hollow Square</p2>
       </div>
