--- a/pages/amenities.html
+++ b/pages/amenities.html
@@ -16,6 +16,10 @@
             <div class="tooltip"> ($) <span class="tooltiptext" style="width: 140px">$50/day, serves 8</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
+            <p>Rolling Racks and Hangars</p>
+            <div class="tooltip"> ($) <span class="tooltiptext">$5/rack</span> </div>
+          </div>
+          <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Ring Light</p>
             <div class="tooltip"> ($) <span class="tooltiptext">$10/day</span> </div>
           </div>
@@ -28,11 +32,7 @@
             <div class="tooltip"> ($) <span class="tooltiptext" style="width: 125px">$5/day, 1 stool</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-            <p>Breakout Spaces</p>
-            <div class="tooltip"> ($) <span class="tooltiptext" style="width: 175px">Contact us for pricing</span> </div>
-          </div>
-          <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-            <p>Waiting Rooms</p>
+            <p>Breakout Spaces and Waiting Rooms</p>
             <div class="tooltip"> ($) <span class="tooltiptext" style="width: 175px">Contact us for pricing</span> </div>
           </div>
         </div>
@@ -51,9 +51,6 @@
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea10ff4ff610f15b578d/1723132432098/icon-heart-tag.png">
             <p>Speaker</p>
-          </div>
-          <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b4ea10ff4ff610f15b578d/1723132432098/icon-heart-tag.png">
-            <p>Rolling Racks and Hangars</p>
           </div>
         </div>
       </div>
