--- a/pages/amenities.html
+++ b/pages/amenities.html
@@ -1,4 +1,4 @@
-<div class="amenities_columns" style="padding-left: 10px;">
+<div class="amenities_columns">
   <div class="column">
     <h4 class="column_title">
       Additional Solutions Include:
@@ -32,7 +32,7 @@
             <div class="tooltip"> ($) <span class="tooltiptext" style="width: 125px">$5/day, 1 stool</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
-            <p>Breakout Spaces and Waiting Rooms</p>
+            <p>Breakout Spaces - Waiting Rooms</p>
             <div class="tooltip"> ($) <span class="tooltiptext" style="width: 175px">Contact us for pricing</span> </div>
           </div>
         </div>
