--- a/pages/amenities.html
+++ b/pages/amenities.html
@@ -29,7 +29,7 @@
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Backless Stools</p>
-            <div class="tooltip"> ($) <span class="tooltiptext" style="width: 125px">$5/day, 1 stool</span> </div>
+            <div class="tooltip"> ($) <span class="tooltiptext" style="width: 125px">$5/stool</span> </div>
           </div>
           <div class="item"><img src="https://static1.squarespace.com/static/65660ef22544614ca593676c/t/66b13ab8ac2ff32a467f2489/1722890936149/icon-price.png">
             <p>Breakout Spaces - Waiting Rooms</p>
