--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@
 <link rel="stylesheet" type="text/css" href="scheduler/style.css">
 <script src="scheduler/index.js" type="text/javascript"></script>
 
-<div id="calendar"></div>
+<div id="holding_box">
+  <div id="calendar"></div>
+</div>
