--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.17/index.global.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/google-calendar@6.1.17/index.global.min.js"></script>
 
+<link rel="stylesheet" type="text/css" href="scheduler/style.css">
+<script src="scheduler/index.js" type="text/javascript"></script>
+
+<img
+  src="https://images.squarespace-cdn.com/content/v1/6103095b9ac5253cfa74ddfd/824a464f-c2f0-4e1d-82e8-b3850d7b08aa/Skedda+Welcome+to+Cre8ive+NYC.png"
+  class="top_img"
+/>
 <div id="holding_box">
   <div id="calendar"></div>
 </div>
